capitulo-5/modules/azure/network.tf
resource "azurerm_virtual_network" "vnet" {
  name                = var.vnet_name
  address_space       = ["10.10.0.0/16"]
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet" "subnets" {
  count                = length(local.subnet_definitions)
  name                 = local.subnet_definitions[count.index].name
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = [local.subnet_definitions[count.index].prefix]
}
